--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,41 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==3.7.1
-attrs==23.1.0
+attrs==23.2.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 colorama==0.4.6
-dataclasses-json==0.6.3
-distro==1.8.0
+datasets==2.16.1
+dill==0.3.7
 filelock==3.13.1
 frozenlist==1.4.1
-fsspec==2023.12.2
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.2
-httpx==0.26.0
+fsspec==2023.10.0
 huggingface-hub==0.20.1
 idna==3.6
 Jinja2==3.1.2
-jsonpatch==1.33
-jsonpointer==2.4
-langchain==0.0.352
-langchain-community==0.0.6
-langchain-core==0.1.3
-langsmith==0.0.74
-lxml==5.0.0
 MarkupSafe==2.1.3
-marshmallow==3.20.1
+mpmath==1.3.0
 multidict==6.0.4
-mypy-extensions==1.0.0
-numpy==1.26.2
-openai==1.6.1
+multiprocess==0.70.15
+networkx==3.2.1
+numpy==1.26.3
 packaging==23.2
-pydantic==2.5.3
-pydantic_core==2.14.6
+pandas==2.1.4
+pyarrow==14.0.2
+pyarrow-hotfix==0.6
+python-dateutil==2.8.2
+pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.1
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-tenacity==8.2.3
+six==1.16.0
+sympy==1.12
 tokenizers==0.15.0
+torch==2.1.2
 tqdm==4.66.1
 transformers==4.36.2
-typing-inspect==0.9.0
 typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
+xxhash==3.4.1
 yarl==1.9.4
